--- a/content/post/il-2026-01.adoc
+++ b/content/post/il-2026-01.adoc
@@ -83,7 +83,9 @@ https://github.com/shaneikennedy/ktui[ktui]
 * Into the YAKR (Yet Another Kafka Replacement) category comes https://kafscale.io/[KafScale], an Apache 2.0 licensed Kafka-on-S3 broker written by Alexander Alten.
 It has support for https://kafscale.io/processors/iceberg/[Iceberg] and https://kafscale.io/processors/sql/[SQL].
 
-* 🔥 Excellent write-up from Sky Kistler at Reddit on https://www.reddit.com/r/RedditEng/comments/1qb03l9/swapping_the_engine_midflight_how_we_moved/[how they migrated their 500+ EC2-based Kafka brokers to k8s-hosted Strimzi], with some impressive numbers - 500+ brokers serving tens of millions of messages per second and storing over a petabyte in live topic data.
+* Good write-up from Sky Kistler at Reddit on https://www.reddit.com/r/RedditEng/comments/1qb03l9/swapping_the_engine_midflight_how_we_moved/[how they migrated their 500+ EC2-based Kafka brokers to k8s-hosted Strimzi], with some impressive numbers - 500+ brokers serving tens of millions of messages per second and storing over a petabyte in live topic data.
+* 🔥 Gwen Shapira's 2017 QCon talk https://www.infoq.com/presentations/contracts-streaming-microservices/[Streaming Microservices: Contracts & Compatibility] is one that I keep coming back to over the years.
+Loosely-coupled services _need_ contracts; just because you're using Kafka and not REST, it doesn't mean you escape that truth.
 
 * https://tansu.io/[Tansu] is a replacement Kafka broker written in Rust, with the interesting twist that it uses Postgres, S3, or SQLite for its storage.
 There have been some interesting recent blog posts, including two on internals performance tuning (https://blog.tansu.io/articles/performance-tuning-i[1] https://blog.tansu.io/articles/performance-tuning-ii-sqlite[2]), as well as https://blog.tansu.io/articles/broker-aws-free-tier[deploying it on a t3.micro instance] on AWS.
@@ -127,6 +129,21 @@ It's fairly high-level, and I'm hoping there'll be a part 3 (if not more) that t
 * A breath of fresh air from Julian Hurault in his https://juhache.substack.com/p/boring-engineering-manifesto[Boring Engineer Manifesto].
 * James Carr has a good explanation of the https://james-carr.org/posts/2026-01-15-transactional-outbox-pattern/[Transactional Outbox Pattern].
 * Good stuff from Tim Castillo, discussing https://substack.com/home/post/p-182914320[how he structures his data pipelines], and in a separate post https://substack.com/home/post/p-185111768[going into depth on the bronze layer]
+* Details from Yupeng Fu and colleagues at Uber of how they do https://www.uber.com/en-AU/blog/how-uber-indexes-streaming-data-with-pull-based-ingestion-in-opensearch/[pull-based ingestion from Kafka] into OpenSearch at scale.
+* Data quality may not be the most exciting of subjects, but without trust in data and organisation's data strategy can soon unravel. Richard Glew goes through some https://medium.com/@richardglew/data-testing-like-its-not-1997-part-1-c5e5b49a3a97[useful principles and ideas for data testing] in this post.
+* I don't care if I'm featuring him three times in one edition; Joe Reis writes _really good stuff_.
+https://practicaldatamodeling.substack.com/p/data-modeling-is-dead-again-2026[This post] looks at the trope that "data modelling is dead". Except as we all know, it really oughtn't be.
+* They may seem obvious enough (or so the Reddit crowd thought 🙄), but the very fact that this blog post about https://medium.com/@tabinashabr/the-hidden-cost-crisis-in-data-engineering-cfaf3fd14b8f[cost efficiency techniques in data engineering] even needs writing suggests that not everyone is aware of them.
+* https://debezium.io/blog/2025/12/16/debezium-3-4-final-released/[Debezium 3.4.0.Final] has been released, including a bunch of new features along with support for Kafka 4.1.1 and Postgres 18.
+* An interesting https://medium.com/data-engineer-things/why-i-chose-go-and-postgres-for-an-etl-pipeline-part-1-d98b80cb234b[set of] https://medium.com/data-engineer-things/why-i-chose-go-and-postgres-for-an-etl-pipeline-part-2-99bd1cf23c0b[posts] from Ngoc Doan in which they describe their ETL pipeline built with Go and Postgres.
+* 🔥 Chris Gambill has some tough words, but ones that I agree with: https://substack.com/home/post/p-183466936[The Mid-Skill Data Engineer is In Trouble].
+* Data contracts are not just _theoretically_ a good idea—they're also used in the real-world.
+Andrew Jones has a https://andrew-jones.com/newsletter/2025-12-19-5-data-contract-implementations-in-the-wild/[list of some implementations] with details of each.
+* Some useful details of the operational discipline that Agoda have adopted for running their https://medium.com/agoda-engineering/how-agoda-enhanced-the-uptime-and-consistency-of-financial-metrics-ef7d54c4e4f0[financial data pipelines].
+* Oscar Ligthart and Rodrigo Loredo from Vinted describe how they manage decentralized, domain‑owned data pipelines with an https://vinted.engineering//2025/12/29/orchestrating-success/[Airflow-based orchestration system].
+* A great https://engineering.zalando.com/posts/2025/12/contributing-to-debezium.html[hands-on post] from Conor Gallagher at Zalando on contributing a fix to Debezium for an issue they were having with WAL growth and logical replication.
+* 🔥 An excellent post from Simon Späti: https://www.ssp.sh/blog/diary-of-a-data-engineer/[A Diary of a Data Engineer].
+Fantastic background and narration, and a crucial section: https://www.ssp.sh/blog/diary-of-a-data-engineer/#what-i-know-now-that-i-wish-i-knew-then[What I Know Now That I Wish I Knew Then].
 
 == Open Table Formats (OTF), Catalogs, Lakehouses etc.
 
@@ -143,6 +160,7 @@ _For a Flink-specific spin, check out my link:/2024/02/16/catalogs-in-flink-sqla
 * Neelesh Salian has built a tool called https://github.com/nssalian/floe[floe] to do https://medium.com/@neeleshsalian/floe-policy-based-table-maintenance-for-iceberg-361afa549925[policy-based table maintenance] for Iceberg tables.
 * Digging into the guts of the Iceberg catalog spec, Ananth Packkildurai https://www.dataengineeringweekly.com/p/a-critique-of-iceberg-rest-catalog[highlights some of the issues] that the overall "compatibility" guarantee might mask.
 * You can now use https://duckdb.org/2025/12/16/iceberg-in-the-browser[Iceberg with DuckDB from the comfort of your web browser]—Carlo Piovesan and colleagues show how.
+* Shaurya Rawat has written up a good exploration of the different ways of https://www.unskewdata.com/blog/kafka-iceberg[getting data from Kafka to Iceberg].
 * Ryft are building a product around Iceberg, and with it some good blog posts.
 These include a discussion of https://www.ryft.io/blog/streaming-with-apache-iceberg-the-operational-problems-at-scale[the challenges of streaming with Iceberg],
 https://www.ryft.io/blog/cdc-strategies-in-apache-iceberg[strategies for materialising CDC data into Iceberg],
@@ -150,7 +168,7 @@ https://www.ryft.io/blog/how-to-choose-an-apache-iceberg-catalog[catalogs in Ice
 and a look at the readiness of different engines for https://www.ryft.io/blog/apache-iceberg-v3-is-it-ready[Iceberg v3].
 * Alex Merced and Andrew Madson are collecting responses for their https://icebergsurvey.datalakehousehub.com/[survey of the Iceberg ecosystem].
 It's open until 31st January for anyone using Iceberg to participate in.
-* Iceberg on GCP? Oscar Pulido looks at the https://medium.com/google-cloud/iceberg-ahead-navigating-the-three-flavors-of-iceberg-on-bigquery-e004eec18d5c[three options available in the BigQuery ecosystem].
+* Iceberg on GCP? Oscar Pulido looks at the https://medium.com/google-cloud/iceberg-ahead-navigating-the-three-flavors-of-iceberg-on-bigquery-e004eec18d5c[three options available in the BigQuery ecosystem], whilst Emir Erez describes https://medium.com/trendyol-tech/building-a-medallion-architecture-using-apache-iceberg-on-google-cloud-c7a00df13878[Trendyol's GCP-based Iceberg data lakehouse].
 * Speaking of GCP, Talat Uyarer & Alex Stephen have published details of the https://opensource.googleblog.com/2026/01/explore-public-datasets-with-apache-iceberg-and-biglake.html[public Iceberg datasets on GCP], starting with NYC Taxi.
 You do need to be set up with GCP to access it (I got excited at first, seeing the Iceberg on DuckDB in browser functionality that I mention above!).
 
@@ -179,6 +197,7 @@ https://blog.hyperparam.app/squirreling-new-sql-engine-for-web/[Their blog post]
 * Details from Phillip LeBlanc at SpiceAI on https://spice.ai/blog/how-we-use-apache-datafusion-at-spice-ai[their use of Apache DataFusion].
 * Jon Anderson https://jander.land/20251227_mutex.html[explores FoundationDB] (a distributed K/V database) in this blog post.
 * The team behind https://responsive.dev/[Responsive] have pivoted from Kafka Streams to launch https://opendata.dev[OpenData], "_a collection of open source databases built on a common, object-native storage and infrastructure foundation._"
+* A fun write-up from Tomás Senart at Axiom detailing https://axiom.co/blog/building-haydex[an optimisation project] on EventDB, their in-house database, eventually getting it to deliver 178 billion rows per second throughput.
 
 == AI
 
