--- a/content/post/il-2026-01.adoc
+++ b/content/post/il-2026-01.adoc
@@ -2,15 +2,14 @@
 draft: false
 title: 'Interesting links - January 2026'
 date: "2026-01-20T10:14:50Z"
-image: "/images/2026/01/"
-thumbnail: "/images/2026/01/"
+image: "/images/2026/01/h_IMG_2568.jpeg"
+thumbnail: "/images/2026/01/t_IMG_3967.jpeg"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Interesting Links
 ---
 
-🎂 Happy Birthday to … this newsletter!
-This is the twelfth edition of it in its current form.
+This is the twelfth edition of this newsletter in its current form.
 It's great to see the audience for it growing, and consistently positive reception when I share it.
 Nice words always inspire me to carry on with it :D
 The https://interestinglinks.substack.com/[Substack edition] (which is exactly the same content but sent out by email), is also picking up views and subscribers.
@@ -22,7 +21,7 @@ A couple of blog posts from me since the last edition of Interesting Links—bot
 * link:/2025/12/18/a-love-letter-to-raycast/[A love letter to Raycast ❤️]
 * link:/2026/01/14/alternatives-to-minio-for-single-node-local-s3/[Alternatives to MinIO for single-node local S3]
 
-I've also been firmly on-board the Claude Code/Opus 4.5 bandwagon, giggling like a child at what it can do.
+I've also been firmly on-board the Claude Code/Opus 4.5 bandwagon, giggling like a child at the sheer magnitude of what it can now do.
 I'm going to write a blog post in its own right shortly in more detail, but if you want to marvel at what AI can do: I migrated my https://noti.st/rmoff/[previous talks site] (and https://speakerdeck.com/rmoff/[the one before that]) to https://talks.rmoff.net/[this brand new one].
 Without writing a single line of code.
 Not one.
@@ -34,6 +33,8 @@ More AI blog posts to come, but for now—on to the Interesting Links!
 include::il-header.adoc[]
 
 == Looking back (Reviews of 2025)…
+
+_See link:#_ai[below] for AI-specific links about 2025._
 
 * Data
     ** 🔥 https://www.dataengineeringweekly.com/p/dew-the-year-in-review-2025[Ananth Packkildurai (Data Engineering Weekly)]
@@ -51,14 +52,12 @@ include::il-header.adoc[]
     ** https://www.infoq.com/minibooks/2025-infoq-trends-reports-emag/[InfoQ - Trends Reports 2025 eMag]
     ** https://www.infoq.com/podcasts/2025-year-review/[InfoQ - 2025 Key Trends Year Review Podcast]
 
-* AI
-    ** https://magazine.sebastianraschka.com/p/state-of-llms-2025[Sebastian Raschka] - The State Of LLMs 2025: Progress, Progress, and Predictions
+== …and looking forward (predictions for 2026)
 
-== …and looking forward (predications for 2026)
+_See link:#_ai[below] for AI-specific links about 2026._
 
-* 🔥 https://simonwillison.net/2026/Jan/8/llm-predictions-for-2026/[Simon Willison] - LLM predictions for 2026.
 * https://oxide-and-friends.transistor.fm/episodes/predictions-2026[Oxide & Friends] (Bryan Cantrill & Adam Leventhal, plus Simon Willison, Steve Klabnik, and Ian Grunert).
-* https://gradientflow.substack.com/p/data-engineering-for-machine-users[Ben Lorica] - Data Engineering in 2026: What Changes?.
+* https://gradientflow.substack.com/p/data-engineering-for-machine-users[Ben Lorica] - Data Engineering in 2026: What Changes?
 * https://www.linkedin.com/pulse/2026-great-engineering-divergence-paul-dix-9qy0e/[Paul Dix] - 2026: The Great Engineering Divergence.
 * 🔥 https://joereis.substack.com/p/2026-general-thoughts-on-whats-ahead[Joe Reis] - 2026 - General Thoughts on What's Ahead.
 * https://columnar.tech/blog/2026-predictions/[Ian Cook (Columnar)] - 10 Predictions for Data Infrastructure in 2026.
@@ -67,7 +66,7 @@ include::il-header.adoc[]
 
 == Kafka and Event Streaming
 
-* 🔥 Another good blog post from Stefan Kecskes, looking https://skey.uk/post/kafka-dead-letter-queue-troubleshooting-guide/[Dead Letter Queue (DLQ) handling] in Kafka.
+* 🔥 Another good blog post from Stefan Kecskes, looking at https://skey.uk/post/kafka-dead-letter-queue-troubleshooting-guide/[Dead Letter Queue (DLQ) handling] in Kafka.
 For a hit of nostalgia, here's a blog post that I wrote in 2019 also looking at https://www.confluent.io/blog/kafka-connect-deep-dive-error-handling-dead-letter-queues/[DLQs in Kafka Connect].
 
 * How many TUIs for Kafka is too many?
@@ -95,7 +94,7 @@ And, if you enjoy lengthy conversations, you'll want to check out https://www.yo
 
 == Analytics
 
-* 🔥 An  lent real-world troubleshooting blog post from Maryna Kryvko and Ivan Potapov at Zalando, describing https://engineering.zalando.com/posts/2025/12/we-hacked-ourselves-so-you-dont-have-to.html[Elasticsearch performance issues and how they resolved them].
+* 🔥 An excellent real-world troubleshooting blog post from Maryna Kryvko and Ivan Potapov at Zalando, describing https://engineering.zalando.com/posts/2025/12/we-hacked-ourselves-so-you-dont-have-to.html[Elasticsearch performance issues and how they resolved them].
 * https://www.sirius-db.com/[Sirius] is a "GPU-native SQL engine" that plugs in to DuckDB, _claiming_ to be an impressive "10× faster than DuckDB and 60× faster than ClickHouse at the same hardware rental cost".
 * A paper from Snowflake and researchers at University of Technology Nuremberg looks at some of the optimisations possible in Snowflake: https://arxiv.org/pdf/2504.11540[Pruning in Snowflake: Working Smarter, Not Harder].
 * A look under the covers at https://rushter.com/blog/clickhouse-strings/[how ClickHouse handles strings], by Artem Golubin.
@@ -106,7 +105,7 @@ And, if you enjoy lengthy conversations, you'll want to check out https://www.yo
 * A deep-dive (of course) from regular Anton Borisov, looking at https://medium.com/fresha-data-engineering/what-the-fuss-with-fluss-flink-2-2-delta-force-f184bd17e223[Flink 2.2's improvements to Delta Join], including support for CDC Upserts.
 
 * Riskified's Gal Krispel has https://www.youtube.com/watch?v=2vjU6Ta3p6U[an interesting talk on YouTube] about using Flink SQL and DataStream together to overcome some issues they found when using SQL alone.
-The talk is in Hebrew but the auto-translation of the captions by YouTube is good enough to follow along.
+_The talk is in Hebrew but the auto-translation of the captions by YouTube is good enough to follow along._
 
 * Somewhat of an interloper to this blog, but Apache Spark has just released version 4.1.
 https://www.databricks.com/blog/introducing-apache-sparkr-41[This blog post] covers some of the new features, including Spark Declarative Pipelines (SDP), as well as lower-latency streaming capabilities with "Real-Time Mode" (RTM) implemented with https://issues.apache.org/jira/browse/SPARK-53736[SPARK-53736].
@@ -116,10 +115,10 @@ https://www.databricks.com/blog/introducing-apache-sparkr-41[This blog post] cov
 == Data Platforms, Architectures, and Modelling
 
 * 🔥 Jesus Gomez at Fresha has https://medium.com/fresha-data-engineering/rethinking-data-modelling-when-moving-from-snowflake-to-starrocks-06ec569e61f1[a good blog post] looking at some of the required changes to their data modelling approach when migrating from Snowflake to StarRocks.
-* Dejan Menges has written up a https://vinted.engineering//2026/01/09/building-global-event-driven-platform-part-1/[two] https://vinted.engineering//2026/01/09/building-global-event-driven-platform-part-2/[part] about Vinted's event driven platform.
+* Dejan Menges has written up a https://vinted.engineering/2026/01/09/building-global-event-driven-platform-part-1/[two] https://vinted.engineering/2026/01/09/building-global-event-driven-platform-part-2/[part] series about Vinted's event driven platform.
 It's fairly high-level, and I'm hoping there'll be a part 3 (if not more) that takes a deeper dive at some of the specifics.
-* Saubhagya Awaneesh and colleagues at Grab have published details of their https://engineering.grab.com/cdp-scenarios[real-time customer data platform] built on technologies include StarRocks, Flink, and Kafka.
-* 🔥 https://www.theguardian.com/technology/2016/oct/12/english-man-spends-11-hours-trying-to-make-cup-of-tea-with-wi-fi-kettle[Mark Rittman] has an insightful post looking at https://blog.rittmananalytics.com/why-weve-tried-to-replace-data-analytics-developers-every-decade-since-1974-5c0de5a05088[_a fifty-year cycle of tools promising to democratise data work, each delivering genuine value while leaving the fundamental need for specialists stubbornly intact._].
+* Saubhagya Awaneesh and colleagues at Grab have published details of their https://engineering.grab.com/cdp-scenarios[real-time customer data platform] built on technologies including StarRocks, Flink, and Kafka.
+* 🔥 https://www.theguardian.com/technology/2016/oct/12/english-man-spends-11-hours-trying-to-make-cup-of-tea-with-wi-fi-kettle[Mark Rittman] has an https://blog.rittmananalytics.com/why-weve-tried-to-replace-data-analytics-developers-every-decade-since-1974-5c0de5a05088[insightful post] looking at _a fifty-year cycle of tools promising to democratise data work, each delivering genuine value while leaving the fundamental need for specialists stubbornly intact_.
 * We've been trying to prise Excel from our users' hands for decades with no success, regardless of the shininess of the replacement. Jelle De Vleminck https://medium.com/datamindedbe/you-dont-have-a-data-platform-without-excel-9f4c87f4982e[lays out an argument for why this is so], and why it's perhaps a misguided goal.
 * Joe Reis on https://practicaldatamodeling.substack.com/p/data-identity-politics-and-the-kimball[Data Identity Politics and The Kimball vs. Inmon War] (_Bill Inmon https://williaminmon.substack.com/p/a-tale-of-two-architectures-kimball[recently re-published] some of his material, always worth reading_).
 * The hype around Data Mesh may have subsided, but it's still an interesting concept. Sebastian Werner and his colleagues at ThoughtWorks have taken a look at https://www.thoughtworks.com/insights/blog/data-strategy/the-state-of-data-mesh-in-2026-from-hype-to-hard-won-maturity[where data mesh is at in 2026].
@@ -130,7 +129,7 @@ It's fairly high-level, and I'm hoping there'll be a part 3 (if not more) that t
 * James Carr has a good explanation of the https://james-carr.org/posts/2026-01-15-transactional-outbox-pattern/[Transactional Outbox Pattern].
 * Good stuff from Tim Castillo, discussing https://substack.com/home/post/p-182914320[how he structures his data pipelines], and in a separate post https://substack.com/home/post/p-185111768[going into depth on the bronze layer]
 * Details from Yupeng Fu and colleagues at Uber of how they do https://www.uber.com/en-AU/blog/how-uber-indexes-streaming-data-with-pull-based-ingestion-in-opensearch/[pull-based ingestion from Kafka] into OpenSearch at scale.
-* Data quality may not be the most exciting of subjects, but without trust in data and organisation's data strategy can soon unravel. Richard Glew goes through some https://medium.com/@richardglew/data-testing-like-its-not-1997-part-1-c5e5b49a3a97[useful principles and ideas for data testing] in this post.
+* Data quality may not be the most exciting of subjects, but without trust in data, an organisation's data strategy can soon unravel. Richard Glew goes through some https://medium.com/@richardglew/data-testing-like-its-not-1997-part-1-c5e5b49a3a97[useful principles and ideas for data testing] in this post.
 * I don't care if I'm featuring him three times in one edition; Joe Reis writes _really good stuff_.
 https://practicaldatamodeling.substack.com/p/data-modeling-is-dead-again-2026[This post] looks at the trope that "data modelling is dead". Except as we all know, it really oughtn't be.
 * They may seem obvious enough (or so the Reddit crowd thought 🙄), but the very fact that this blog post about https://medium.com/@tabinashabr/the-hidden-cost-crisis-in-data-engineering-cfaf3fd14b8f[cost efficiency techniques in data engineering] even needs writing suggests that not everyone is aware of them.
@@ -140,7 +139,7 @@ https://practicaldatamodeling.substack.com/p/data-modeling-is-dead-again-2026[Th
 * Data contracts are not just _theoretically_ a good idea—they're also used in the real-world.
 Andrew Jones has a https://andrew-jones.com/newsletter/2025-12-19-5-data-contract-implementations-in-the-wild/[list of some implementations] with details of each.
 * Some useful details of the operational discipline that Agoda have adopted for running their https://medium.com/agoda-engineering/how-agoda-enhanced-the-uptime-and-consistency-of-financial-metrics-ef7d54c4e4f0[financial data pipelines].
-* Oscar Ligthart and Rodrigo Loredo from Vinted describe how they manage decentralized, domain‑owned data pipelines with an https://vinted.engineering//2025/12/29/orchestrating-success/[Airflow-based orchestration system].
+* Oscar Ligthart and Rodrigo Loredo from Vinted describe how they manage decentralized, domain‑owned data pipelines with an https://vinted.engineering/2025/12/29/orchestrating-success/[Airflow-based orchestration system].
 * A great https://engineering.zalando.com/posts/2025/12/contributing-to-debezium.html[hands-on post] from Conor Gallagher at Zalando on contributing a fix to Debezium for an issue they were having with WAL growth and logical replication.
 * 🔥 An excellent post from Simon Späti: https://www.ssp.sh/blog/diary-of-a-data-engineer/[A Diary of a Data Engineer].
 Fantastic background and narration, and a crucial section: https://www.ssp.sh/blog/diary-of-a-data-engineer/#what-i-know-now-that-i-wish-i-knew-then[What I Know Now That I Wish I Knew Then].
@@ -148,7 +147,7 @@ Fantastic background and narration, and a crucial section: https://www.ssp.sh/bl
 == Open Table Formats (OTF), Catalogs, Lakehouses etc.
 
 * As fun as it is importing a ton of Hadoop dependencies every time we want to use Parquet /s there might be a better alternative—and my colleague Gunnar Morling is building a proof of concept called https://github.com/hardwood-hq/hardwood[Hardwood] as a minimal dependency implementation of Parquet.
-(I also like the https://www.google.com/search?q=parquet+floor[Parquet]/https://www.google.com/search?q=hardwood+floor[Hardwood] wordplay ;) )
+(I also like the https://www.google.com/search?q=parquet+floor[Parquet] / https://www.google.com/search?q=hardwood+floor[Hardwood] wordplay ;) )
 * Catalogs are, for me, one of the most confusing aspects of the data platform ecosystem.
 The term is so overloaded, and numerous products in the space overlap in functionality too.
 Hari Thatavarthy does a good job of explaining https://medium.com/@hari.thatavarthy/from-data-chaos-to-data-clarity-the-evolving-role-of-the-data-catalog-e574a5001a72[the evolving role of the data catalog].
@@ -158,7 +157,7 @@ _For a Flink-specific spin, check out my link:/2024/02/16/catalogs-in-flink-sqla
 
 * Ananth Packkildurai has written a blog post detailing https://medium.com/@zeta-decoded/zetas-lakehouse-journey-a-composable-scalable-and-federated-architecture-df0ab5f19c3a[Zeta's AWS S3Tables/Iceberg-based lakehouse], with further details about https://aws.amazon.com/blogs/storage/how-zeta-global-scales-multi-tenant-data-ingestion-with-amazon-s3-tables/[the ingestion process here].
 * Neelesh Salian has built a tool called https://github.com/nssalian/floe[floe] to do https://medium.com/@neeleshsalian/floe-policy-based-table-maintenance-for-iceberg-361afa549925[policy-based table maintenance] for Iceberg tables.
-* Digging into the guts of the Iceberg catalog spec, Ananth Packkildurai https://www.dataengineeringweekly.com/p/a-critique-of-iceberg-rest-catalog[highlights some of the issues] that the overall "compatibility" guarantee might mask.
+* 🔥 Digging into the guts of the Iceberg catalog spec, Ananth Packkildurai https://www.dataengineeringweekly.com/p/a-critique-of-iceberg-rest-catalog[highlights some of the issues] that the overall "compatibility" guarantee might mask.
 * You can now use https://duckdb.org/2025/12/16/iceberg-in-the-browser[Iceberg with DuckDB from the comfort of your web browser]—Carlo Piovesan and colleagues show how.
 * Shaurya Rawat has written up a good exploration of the different ways of https://www.unskewdata.com/blog/kafka-iceberg[getting data from Kafka to Iceberg].
 * Ryft are building a product around Iceberg, and with it some good blog posts.
@@ -170,7 +169,7 @@ and a look at the readiness of different engines for https://www.ryft.io/blog/ap
 It's open until 31st January for anyone using Iceberg to participate in.
 * Iceberg on GCP? Oscar Pulido looks at the https://medium.com/google-cloud/iceberg-ahead-navigating-the-three-flavors-of-iceberg-on-bigquery-e004eec18d5c[three options available in the BigQuery ecosystem], whilst Emir Erez describes https://medium.com/trendyol-tech/building-a-medallion-architecture-using-apache-iceberg-on-google-cloud-c7a00df13878[Trendyol's GCP-based Iceberg data lakehouse].
 * Speaking of GCP, Talat Uyarer & Alex Stephen have published details of the https://opensource.googleblog.com/2026/01/explore-public-datasets-with-apache-iceberg-and-biglake.html[public Iceberg datasets on GCP], starting with NYC Taxi.
-You do need to be set up with GCP to access it (I got excited at first, seeing the Iceberg on DuckDB in browser functionality that I mention above!).
+You do need to be set up with GCP to access it (_I got excited at first, seeing the Iceberg on DuckDB in browser functionality that I mention above!_).
 
 === Delta Lake and Hudi
 
@@ -184,7 +183,7 @@ _If this is a thing you're wanting to do, you might also be interested in my pre
 * Thomas Kejser takes a nice gnarly look at https://database-doctor.com/posts/tpch-q10.html[query execution specifics in one of the TPC-H benchmark queries].
 * 🔥 Marc Brooker ponders https://brooker.co.za/blog/2025/12/15/database-for-ssd.html[what a database designed specifically for SSDs] might look like.
 * A couple of Postgres internals posts, with Radim Marek looking at https://boringsql.com/posts/good-bad-arrays/[Postgres arrays] and Tomas Vondra digs into the https://vondra.me/posts/dont-give-postgres-too-much-memory/[paradoxical finding that more memory in Postgres isn't always better].
-* MySQL was bought by Oracle in 2009, and the patterns of commits to it has changed markedly in the last year according to Otto Kekäläinen, who https://optimizedbyotto.com/post/reasons-to-stop-using-mysql/[argues that] it's no longer true open source, and that users should consider adopting MariaDB instead.
+* MySQL was bought by Oracle in 2009, and the pattern of commits to it has changed markedly in the last year according to Otto Kekäläinen, who https://optimizedbyotto.com/post/reasons-to-stop-using-mysql/[argues that] it's no longer true open source, and that users should consider adopting MariaDB instead.
 * Details from Dhyanam Vaidya and colleagues at Uber describing https://www.uber.com/blog/from-static-rate-limiting-to-intelligent-load-management/[how they implement load management] on their MySQL-based in-house distributed databases Docstore and Schemaless.
 
 
@@ -204,18 +203,92 @@ https://blog.hyperparam.app/squirreling-new-sql-engine-for-web/[Their blog post]
 _I warned you link:/2025/09/30/interesting-links-september-2025/#_ai[previously]…this AI stuff is here to stay, and it'd be short-sighted to think otherwise._
 _As I read and learn more about it, I'm going to share interesting links (the clue is in the blog post title) that I find—whilst trying to avoid the breathless hype and slop._
 
+Well, gosh darnit.
+Didn't this just blow up in the last month?
+Whilst Sonnet 4.5 was just trundling along giving ammo to the AI deniers, Opus 4.5 has come and blown things out of the water.
+If you've no idea what I'm talking about, have a https://www.platformer.news/claude-code-review-web-design/[read] / https://youtu.be/hchsgcuDBfs?si=-qarzMf26siG-_MN&t=1626[listen] to Casey Newton's recent thoughts.
+
+In an industry in which the term _super-exciting_ has been devalued, what is happening now is, genuinely, *SUPER-SUPER-EXCITING*.
+
+I'll open with DHH's tweet:
+
+{{< x user="dhh" id="2007503687745490976" >}}
+
+Not a fan of DHH?
+How about Charity Majors: https://charitydotwtf.substack.com/p/2025-was-for-ai-what-2010-was-for[**2025 was for AI what 2010 was for cloud**].
+
+Stop and think about that.
+In the late 2000s cloud was this thing that of course the vendors were trying to sell (vendors gonna vend), and _some_ people got, but most people sniffed at or ignored.
+Now 15 years later…who's ignoring cloud?
+
+Anyway, I'll save my pontificating for another blog post.
+But there are a ton of interesting links to share with you about AI, so here they are.
+_You'll have to excuse the lack of narrative on each one; there are just too many this month_ :)
+
+=== Looking forward & looking back
+
+* Sebastian Raschka: https://magazine.sebastianraschka.com/p/state-of-llms-2025[The State Of LLMs 2025].
+* 🔥 Andrej Karpathy: https://karpathy.bearblog.dev/year-in-review-2025/[2025 LLM Year in Review].
+* Simon Willison: https://simonwillison.net/2025/Dec/31/the-year-in-llms/[2025: The year in LLMs].
+* Cedric Clyburn: https://developers.redhat.com/articles/2026/01/07/state-open-source-ai-models-2025[The state of open source AI models in 2025].
+* 🔥 Simon Willison: https://simonwillison.net/2026/Jan/8/llm-predictions-for-2026/[LLM predictions for 2026].
+* Jakob Nielsen: https://jakobnielsenphd.substack.com/p/2026-predictions[18 Predictions for 2026]
+* Brent Ozar: https://www.brentozar.com/archive/2026/01/database-development-with-ai-in-2026/[Database Development with AI in 2026]
+
+=== Strategy & Ideas
+
+* antirez: https://antirez.com/news/158[Don't fall into the anti-AI hype] (https://lobste.rs/s/cmsfbu/don_t_fall_into_anti_ai_hype[lobste.rs comments]).
+* 🔥 Oxide and Friends podcast: https://oxide-and-friends.transistor.fm/episodes/engineering-rigor-in-the-llm-age[Engineering Rigor in the LLM Age].
+* Eric Broda: https://medium.com/@ericbroda/ambient-agents-always-on-always-listening-always-working-2bba910fc3e8[Ambient Agents]
+* If AI makes things so easy, are we going to need moats? Definitely. Both https://frontierai.substack.com/p/data-is-your-only-moat[Data] (Vikram Sreekanti & Joseph E. Gonzalez) and https://wangcong.org/2026-01-13-personal-taste-is-the-moat.html[Personal Taste] (Cong Wang).
+
+=== Using AI—Product
+
+* Amaresh Marripudi: https://bytes.swiggy.com/hermes-v3-building-swiggys-conversational-ai-analyst-a41057a2279d[Building Swiggy's Conversational AI Analyst] (https://www.infoq.com/news/2026/01/swiggy-hermes-conversational-ai/[InfoQ summary])
+* 🔥 Yuqing Zhang, Congzhe Su, Susan Liu: https://www.etsy.com/codeascraft/how-etsy-uses-llms-to-improve-search-relevance[How Etsy Uses LLMs to Improve Search Relevance]
+* Chintan Turakhia: https://www.uber.com/blog/machine-learning/[Engineering More Reliable Transportation with Machine Learning and AI at Uber] (an old post, but still interesting)
+* Karthik Ramgopal and Daniel Hewlett: https://www.infoq.com/presentations/LinkedIn-agent-hiring-assistant/[Lessons Learned from Building LinkedIn's First Agent: Hiring Assistant]
+
+=== Using AI—Platforms
+* Jason Shang and Artem Nabirkin: https://dropbox.tech/machine-learning/feature-store-powering-realtime-ai-in-dropbox-dash[Inside the feature store powering real-time AI in Dropbox Dash]
+* Rohan Varshney: https://eng.lyft.com/lyfts-feature-store-architecture-optimization-and-evolution-7835f8962b99[Lyft's Feature Store: Architecture, Optimization, and Evolution]
+* 🔥 Paul Baranowski: https://tech.instacart.com/simplifying-large-scale-llm-processing-across-instacart-with-maple-63df4508d5be[Simplifying Large-Scale LLM Processing across Instacart with Maple]
+* Karthik Ramgopal and Prince Valluri: https://www.infoq.com/podcasts/platform-engineering-scaling-agents/[Scaling Agents and MCP at LinkedIn]
+
+=== Using AI—Engineering
+
+* 🔥 Bryan Cantrill: https://rfd.shared.oxide.computer/rfd/0576[Using LLMs at Oxide]
+* Paarth Chothani: https://www.uber.com/blog/genie-ubers-gen-ai-on-call-copilot/[Uber's RAG‑Powered Slack Bot for On‑Call Support] (2024)
+* Ethan Mollick: https://www.oneusefulthing.org/p/claude-code-and-what-comes-next[Claude Code and What Comes Next]
+* Max Charas and Marc Bruggmann—Background Coding Agents at Spotify https://engineering.atspotify.com/2025/11/spotifys-background-coding-agent-part-1[part 1] / https://engineering.atspotify.com/2025/11/context-engineering-background-coding-agents-part-2[part 2] / https://engineering.atspotify.com/2025/12/feedback-loops-background-coding-agents-part-3[part 3]
+* Andrew Swerdlow, Sepideh Setayeshfar, Kushan Mehta, and David Rahn: https://corp.roblox.com/newsroom/2026/01/doubled-ai-code-acceptance-teaching-models-think-like-roblox-engineers[Doubling AI Code Acceptance at Roblox]
+* Eric Chima and Leonardo Quixadá: https://open.nytimes.com/how-the-new-york-times-is-scaling-unit-test-coverage-using-ai-tools-fa796bf9b8d2[Scaling Unit Test Coverage using AI Tools at the New York Times]
+* Léo Valette: https://medium.com/blablacar/how-we-used-ai-to-automate-our-boring-code-migrations-80577e5fb0a5[Using AI to Automate Code Migrations at BlaBlaCar]
+
+=== Philosophy & Society
+
+* Simon Willison: https://simonw.substack.com/i/184400226/my-answers-to-the-questions-i-posed-about-porting-open-source-code-with-llms-2026-01-11[What are the ethics around using LLMs to port open source code?]
+* 🔥 Mariano-Florentino Cuéllar et al: https://arxiv.org/abs/2412.02730[Shaping AI's Impact on Billions of Lives]
+* Casey Newton: https://www.platformer.news/fake-uber-eats-whisleblower-hoax-debunked/[Debunking the AI food delivery hoax that fooled Reddit]
+* Dan Birks: https://www.sebp.police.uk/post/evidence-based-policing-and-the-rise-of-ai[Evidence-based policing and the rise of AI]
+* 🔥 Rutger Bregman: https://www.bbc.co.uk/sounds/play/m002nhld[Fighting for Humanity in the Age of the Machine] (BBC Reith Lectures 2025, 4/4)
 
 == And finally…
 
 _Nothing to do with data, but stuff that I've found interesting or has made me smile._
 
 === Think
-
-=== Tool
-
-=== Watch
+* Rutger Bregman: https://www.bbc.co.uk/sounds/brand/b00729d9[BBC Reith Lectures 2025: Moral Revolution]
+* 🔥 Brad Stulberg: https://bradstulberg.substack.com/p/25-rules-for-living-an-excellent[25 Rules for Living an Excellent Life in a Chaotic World]
+* Rion Williams: https://rion.io/2025/12/30/striking-a-balance-working-fully-remote-for-nearly-a-decade/[Striking a Balance: Working Fully Remote for Nearly a Decade]
+* Candost Dagdeviren: https://candost.blog/the-unbearable-joy-of-sitting-alone-in-a-cafe/[The Unbearable Joy of Sitting Alone in A Café]
 
 === Nerd
+
+* https://zzz.zoomquilt2.com/[ZOOMQUILT 2] _I don't even know_ what _this is, but it's damn cool. And liable to give you motion sickness_ ;)
+* Some good lists of engineering blogs to follow from https://news.ycombinator.com/item?id=46363921[folk on Hacker News], and https://clickhouse.com/blog/tech-blogs[Alexey Milovidov] at ClickHouse.
+* https://maurycyz.com/misc/raw_photo/[What an unprocessed photo looks like]
+* Nikita Prokopov: https://tonsky.me/blog/tahoe-icons/[It’s hard to justify Tahoe icons] (not really Mac-specific, just a useful study in UX patterns)
 
 ---
 
