--- a/content/post/il-2026-01.adoc
+++ b/content/post/il-2026-01.adoc
@@ -9,10 +9,10 @@ categories:
 - Interesting Links
 ---
 
-This is the twelfth edition of this newsletter in its current form.
-It's great to see the audience for it growing, and consistently positive reception when I share it.
-Nice words always inspire me to carry on with it :D
-The https://interestinglinks.substack.com/[Substack edition] (which is exactly the same content but sent out by email), is also picking up views and subscribers.
+_This is the twelfth edition of this newsletter in its current form._
+_It's great to see the audience for it growing, and consistently positive reception when I share it._
+_Nice words always inspire me to carry on with it :D_
+_The https://interestinglinks.substack.com/[substack edition] (which is exactly the same content but sent out by email), is also picking up views and subscribers._
 
 <!--more-->
 
@@ -203,6 +203,9 @@ https://blog.hyperparam.app/squirreling-new-sql-engine-for-web/[Their blog post]
 _I warned you link:/2025/09/30/interesting-links-september-2025/#_ai[previously]…this AI stuff is here to stay, and it'd be short-sighted to think otherwise._
 _As I read and learn more about it, I'm going to share interesting links (the clue is in the blog post title) that I find—whilst trying to avoid the breathless hype and slop._
 
+.nano banana one-shot. prompt: "create meme: i iz now agentic"
+image::/images/2026/01/i_iz.webp[nano banana one-shot. prompt: "create meme: i iz now agentic"]
+
 Well, gosh darnit.
 Didn't this just blow up in the last month?
 Whilst Sonnet 4.5 was just trundling along giving ammo to the AI deniers, Opus 4.5 has come and blown things out of the water.
@@ -278,10 +281,10 @@ _You'll have to excuse the lack of narrative on each one; there are just too man
 _Nothing to do with data, but stuff that I've found interesting or has made me smile._
 
 === Think
-* Rutger Bregman: https://www.bbc.co.uk/sounds/brand/b00729d9[BBC Reith Lectures 2025: Moral Revolution]
 * 🔥 Brad Stulberg: https://bradstulberg.substack.com/p/25-rules-for-living-an-excellent[25 Rules for Living an Excellent Life in a Chaotic World]
 * Rion Williams: https://rion.io/2025/12/30/striking-a-balance-working-fully-remote-for-nearly-a-decade/[Striking a Balance: Working Fully Remote for Nearly a Decade]
 * Candost Dagdeviren: https://candost.blog/the-unbearable-joy-of-sitting-alone-in-a-cafe/[The Unbearable Joy of Sitting Alone in A Café]
+* Rutger Bregman: https://www.bbc.co.uk/sounds/brand/b00729d9[BBC Reith Lectures 2025: Moral Revolution]
 
 === Nerd
 
