--- a/content/post/il-2026-01.adoc
+++ b/content/post/il-2026-01.adoc
@@ -47,7 +47,7 @@ _See link:#_ai[below] for AI-specific links about 2025._
     ** https://www.bauplanlabs.com/post/bauplan-a-year-in-review[Bauplan].
 
 * General tech & industry
-    ** https://newsletter.francofernando.com/p/end-of-year-wrap-2025[Franco Fernando (The Polymathic Engineer)].
+    ** https://newsletter.francofernando.com/p/end-of-year-wrap-2025[Fernando Franco (The Polymathic Engineer)].
     ** https://timodechau.com/blog/2025-learnings-thoughts/[Timo Dechau].
     ** https://www.infoq.com/minibooks/2025-infoq-trends-reports-emag/[InfoQ - Trends Reports 2025 eMag]
     ** https://www.infoq.com/podcasts/2025-year-review/[InfoQ - 2025 Key Trends Year Review Podcast]
