Remove dead links

--- a/content/post/learning-go-part1.adoc
+++ b/content/post/learning-go-part1.adoc
@@ -17,18 +17,18 @@ NOTE: link:/2020/06/25/learning-golang-some-rough-notes-s01e00/[Learning Go : Ba
 
 👉 https://tour.golang.org/moretypes/1[A Tour of Go : Pointers]
 
-I've never used pointers before. Found plenty of good resources about *what* they are, e.g. 
+I've never used pointers before. Found plenty of good resources about *what* they are, e.g.
 
 * https://www.callicoder.com/golang-pointers/
 * https://dave.cheney.net/2017/04/26/understand-go-pointers-in-less-than-800-words-or-your-money-back
 
-But *why*? It's like explaining patiently to someone that 2+2 = 4, without really explaining *why* would we want to add two numbers together in the first place. 
+But *why*? It's like explaining patiently to someone that 2+2 = 4, without really explaining *why* would we want to add two numbers together in the first place.
 
 <!--more-->
 
 (side note: I bet a ton of devrel material could be made more accessible by addressing the huge number of assumptions that are made, explicit and implicit, in explanations given)
 
-My colleague Ricardo Ferreira gave me this great explanation: 
+My colleague Ricardo Ferreira gave me this great explanation:
 
 [quote]
 ____
@@ -53,9 +53,11 @@ I also got some useful feedback from people on Twitter:
 
 {{< x user="rmoff" id="1275777088268709889" >}}
 
-{{< x user="ewencp" id="1275842242972803072" >}}
+// Account deleted
+// {{< x user="ewencp" id="1275842242972803072" >}}
 
-{{< x user="RaySaltrelli" id="1275833679412068352" >}}
+// Account deleted
+// {{< x user="RaySaltrelli" id="1275833679412068352" >}}
 
 '''
 == 📺 More Episodes…
@@ -83,4 +85,3 @@ I also got some useful feedback from people on Twitter:
 ** link:/2020/07/02/learning-golang-some-rough-notes-s01e08-images/[S01E08 - Images]
 ** link:/2020/07/02/learning-golang-some-rough-notes-s01e09-concurrency-channels-goroutines/[S01E09 - Concurrency (Channels, Goroutines)]
 ** link:/2020/07/03/learning-golang-some-rough-notes-s01e10-concurrency-web-crawler/[S01E10 - Concurrency (Web Crawler)]
-
