Typos and images

--- a/content/post/siai-jan26.adoc
+++ b/content/post/siai-jan26.adoc
@@ -2,8 +2,8 @@
 draft: false
 title: 'Reflections of a Developer on LLMs in January 2026'
 date: "2026-01-27T13:40:58Z"
-image: "/images/2026/01/"
-thumbnail: "/images/2026/01/"
+image: "/images/2026/01/h_IMG_3992.jpeg"
+thumbnail: "/images/2026/01/t_IMG_3930.jpeg"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - AI
@@ -34,7 +34,7 @@ But at the same time… it _is_ the worst of times, the age of foolishness, seas
 Bot-farms spewing divisive nonsense all over social media no longer need to copy and paste their false statements in a way that's easily spotted; instead they can write custom text at scale whilst still giving the illusion of a real person behind the fake accounts.
 Combine human greed with the speed at which LLMs can generate content and you have an infinite flow of link:/2025/11/25/ai-smells-on-medium/[slop] spurting all over the internet like a farmer's muck spreader gone awry at scale.
 AI voice agents are becoming better and used for scamming people with realistic and targeted calls that would previously have been uneconomical to do at the scale necessary to reap a reward.
-AI generated pictures are being used to https://www.platformer.news/fake-uber-eats-whisleblower-hoax-debunked/[create hoaxes] and flood social media with dangerous rage-baiting.
+AI-generated pictures are being used to https://www.platformer.news/fake-uber-eats-whisleblower-hoax-debunked/[create hoaxes] and flood social media with dangerous rage-baiting.
 
 == Baby? There went the bathwater
 It might be the best & worst of times, but that doesn't mean you have to pick sides.
@@ -57,8 +57,8 @@ AI, and specifically LLMs, are a valuable tool for developers, and it's one that
 
 Picture a Capuchin monkey sat on its haunches https://royalsocietypublishing.org/rsos/article/11/6/240161/66498/Nut-cracking-success-and-efficiency-in-two-wild[using a stone to crack open a nut].
 Rudimentary, but effective.
-Would we as developers use a stone when we needed a hammer to bang in a nail? No, that would be stupid—we use the right tool for the job, ofc. Hammers are an evolution of the tool from a crude stone, and we use that because it's the best tool for the job.
-But once the mechanical hammer drill came along, do we cling to our manual hammer when we've got a nail to bang into a brick wall? Again, no, that would be stupid. We want to use the *best tool for the job*.
+Would we as developers use a stone when we needed a hammer to bang in a nail? No, that would be stupid—we use the right tool for the job, of course. Hammers are an evolution of the tool from a crude stone, and we use that because it's the best tool for the job.
+But once the hammer drill came along, do we cling to our manual hammer when we've got a nail to bang into a brick wall? Again, no, that would be stupid. We want to use the *best tool for the job*.
 
 It's the same evolution of tooling happening in AI.
 LLMs are a tool.
@@ -110,8 +110,8 @@ ____
 This was in May 2023 (eons ago, in LLM years).
 
 As an end user of LLMs, I think this mental model really does work.
-If you, as a senior+ developer, think of an LLMs as a very eager junior developer working for you.
-They're fresh eyed and bushy tailed, and goddamnit they talk too much, doesn't listen enough, and makes stupid mistakes.
+If you, as a senior+ developer, think of an LLM as a very eager junior developer working for you.
+They're fresh-eyed and bushy-tailed, and goddamnit they talk too much, don't listen enough, and make stupid mistakes.
 But…you give them a job to do, point them in the right direction, and iterate with them _under close supervision_…and suddenly you're finding yourself a lot more productive.
 Tutored well, a junior developer becomes a force-multiplier, a mini-me.
 
@@ -176,14 +176,14 @@ This meant a crap-ton of images which I didn't care about, but Claude Code assum
 Claude then proceeded to build and populate a site to run locally.
 There were plenty of mistakes, as well as plenty of yak-shaving ("hmm can you move this bit to there, and change the shade of that link there").
 This can be part of the danger with Claude.
-It will never rolls its eyes and sigh at you when you ask for the hundredth amendment to your original spec, so it's easy to get sucked into endless fiddling and tweaking.
+It will never roll its eyes and sigh at you when you ask for the hundredth amendment to your original spec, so it's easy to get sucked into endless fiddling and tweaking.
 
-I found I quickly burnt through my Pro token allowance, which actually served well as a gatekeeper on my time, forcing me to step back until the token were refreshed.
-After four early morning/late nights around my regular work, I cut-over my DNS and you can see the results at https://talks.rmoff.net/.
+I found I quickly burnt through my Pro token allowance, which actually served well as a gatekeeper on my time, forcing me to step back until the tokens were refreshed.
+After four early morning/late nights around my regular work, I cut over my DNS and you can see the results at https://talks.rmoff.net/.
 
-image::/images/2026/01/2026-01-27T15-36-05-008Z.png[]
+image::/images/2026/01/2026-01-27T15-36-05-008Z.webp[]
 
-The key things that Claude Code did that I'd not been able to get ad-hoc chat sessions (or even Cursor) last year to do include:
+The key things that Claude Code did that I'd not been able to get ad hoc chat sessions (or even Cursor) last year to do include:
 
 * Planning out a full project like this one, from the overview down to every detail
 * Talking the talk (writing the code) *and* walking the walk (independently running the code, fixing errors, evaluating logic problems, etc)
@@ -231,7 +231,7 @@ But if I'm writing code as a professional for my job, it's _on me_ to make sure 
 
 === Playwright
 
-If you're doing any kind of webdev work, following https://blog.jenkster.com/2026/01/making-your-agent-see-what-its-missing/[Kris Jenkins' tip] and use https://playwright.dev/docs/intro#installing-playwright[Playwright] so that Claude can "see" as it develops.
+If you're doing any kind of webdev work, follow https://blog.jenkster.com/2026/01/making-your-agent-see-what-its-missing/[Kris Jenkins' tip] and use https://playwright.dev/docs/intro#installing-playwright[Playwright] so that Claude can "see" as it develops.
 You can manually take screenshots and paste those into Claude too if you want (including ones you've annotated with observations and instructions) but in general and particularly for regression testing, Playwright is an excellent addition.
 
 Because this is Claude, you don't need to actually know how to configure Playwright or run its tests, or anything like that.
@@ -256,7 +256,7 @@ In your `~/.claude/settings.json` include:
 
 Obviously, you can waste a lot of time customising it to use _just the right_ sound effect from your favourite 1980s arcade game.
 
-TIP: You might _not_ want to always do this; see my observation above about context switching and continuous interuptions
+TIP: You might _not_ want to always do this; see my observation above about context switching and continuous interruptions.
 
 === Keep an eye on cost
 
@@ -273,9 +273,9 @@ You can include the cost of the current session in the status line by adding thi
 
 It'll look something like this:
 
-image::/images/2026/01/2026-01-27T15-45-53-209Z.png[]
+image::/images/2026/01/2026-01-27T15-45-53-209Z.webp[]
 
-Also checkout https://ccusage.com/[`ccusage`] which uses the Claude log data to calculate usage and break it down in different ways which can help you optimise your use of it
+Also check out https://ccusage.com/[`ccusage`] which uses the Claude log data to calculate usage and break it down in different ways which can help you optimise your use of it
 
 [source,bash]
 ----
@@ -309,7 +309,7 @@ Go read up on things like:
 
 * Context windows—what the LLM knows about what you're doing
 * Context rot—the more that's in the LLM's context window, the less effective it can sometimes become
-* `CLAUDE.md`—where Claude makes a note of what it is your building and core principles, toolsets, etc
+* `CLAUDE.md`—where Claude makes a note of what it is you're building and core principles, toolsets, etc
     ** You can get a lot of value by spending some time on this so that you can restart your session when you need to (e.g. to clear the context window) without having Claude 'forget' too much of the basics of what you've told it
     ** Work _with_ Claude on this file—literally say, look at your CLAUDE.md, I have to keep telling you to do _x_, how can you remember it better. If you give it permission, it'll then go and update its own file
 * Use plan mode and accept-change (shift-tab) judiciously.
@@ -319,15 +319,21 @@ Claude is your servant (for now) and it's up to you to boss it around firmly as 
 
 == Claude Code is not just about churning out code
 
-I've been experimenting with a couple of non-coding examples, both pairing Claude with https://github.com/basicmachines-co/basic-memory[basic-memory] and an Obsidian vault.
+I've been experimenting with a few non-coding examples, both pairing Claude with https://github.com/basicmachines-co/basic-memory[basic-memory] and an Obsidian vault.
+
+* Proofreading my blog (https://github.com/rmoff/rmoff-blog/blob/main/.claude/skills/proofread-blog/SKILL.md[here's the prompt], if you're interested; PRs welcome 😉).
++
+image::/images/2026/01/proofread.webp[]
+I also have a Raycast AI Preset to do this, but am finding myself more and more reaching for Claude's terminal window.
+It works well because I write my blog posts in Asciidoc, which Claude can read and edit directly (if I ask it to).
 
 * Planning a holiday.
-Iteratively building up with CLAUDE.md that captures the requirements of the holiday, it can then help with itineraries, checklists, discuss areas, etc etc.
+Iteratively building up with Claude a spec that captures the requirements of the holiday, it can then help with itineraries, checklists, discuss areas, etc etc.
 As with the coding project above, it being _one window with which to interact_ is really powerful.
 
 * Acting as a running coach.
 Plugging in https://github.com/matin/garth-mcp-server[Garmin] and https://github.com/r-huijts/strava-mcp[Strava] data via MCP I can capture all of my running and health info, and discuss with Claude planned workouts, even weaving in notes from past physio appointments.
-_Obviously_ I am not following it blindly but as an exercise (geddit?!) in integration and LLMs, it's pretty fun.
+_Obviously_ I am not following it blindly but as an exercise (geddit?!) in integration and LLMs, it's pretty _fun_.
 
 == My call to action: FAFO
 
