Add category tag

--- a/content/post/siai-jan26.adoc
+++ b/content/post/siai-jan26.adoc
@@ -8,6 +8,7 @@ credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - AI
 - Stumbling into AI
+- Claude Code
 ---
 
 :source-highlighter: rouge
