Add note on AI's impact on junior developers
Added a note discussing the role of AI in relation to junior developers and its potential impact on the software industry.

--- a/content/post/siai-jan26.adoc
+++ b/content/post/siai-jan26.adoc
@@ -124,6 +124,19 @@ Do you have to keep telling them the same thing more than once? Yes.
 Do they write code that drives you into fits of rage with its idiocy and overcomplexity? Yes.
 Do they improve each time and ultimately *give you more time on your plate to think about the bigger picture of system design and implementation*? Yes.
 
+[NOTE]
+====
+_edit:_
+
+I'm not intending to imply—as some may take from this—that in drawing the analogy I am actually suggesting we _replace_ junior developers with AI.
+After all, junior developers learn, and in time become the senior developers who know when Claude is talking bollocks—that pipeline matters.
+Rather, I'm trying to characterise how one may look at the tool and one's interactions with it.
+
+I am also leaving wide open the issue of what the impact of AI on junior developers themselves actually could be.
+The consequences for the software industry are likely to be vast.
+Commenting on this is beyond my experience—and there is also plenty being written elsewhere about it.
+====
+
 Working with Claude Code over the past few weeks really has got me convinced that we've now taken a step forward where time invested in learning how to use it (because there _is_ a learning curve) is time that's well spent.
 
 Previously, using an LLM was not much more than typing `explain nuclear fission in the style of peter rabbit` (or various cargo-culting "prompt engineering" techniques).
