Add addendum on RustFS and Garage blog post
Added an addendum discussing implementation details of RustFS and Garage.

--- a/content/post/minio-alt.adoc
+++ b/content/post/minio-alt.adoc
@@ -372,3 +372,7 @@ A few parting considerations to bear in mind when choosing a replacement for Min
 
 * **Governance**. Whilst all the projects are OSS, only Ozone is owned by a foundation (ASF). All the others could, _in theory_, change their licence at the drop of a hat (just like MinIO did).
 * **Community health**. What's the "bus factor"? A couple of the projects above have a very long and healthy history—but from a single contributor. If they were to abandon the project, would someone in the community fork and continue to actively develop it?
+
+== Addendum
+
+* 2026-01-30: Justin Cormack has written about some of the https://buttondown.com/justincormack/archive/ignore-previous-directions-10-new-rusty-object/[implementation details and functionality of RustFS and Garage]
